--- a/Web_Dev/Week 6/Assignments/assignment-1/problems/0-horizontal-align/index.html
+++ b/Web_Dev/Week 6/Assignments/assignment-1/problems/0-horizontal-align/index.html
@@ -9,7 +9,8 @@
     <style>
         .container {
             width: 1200px;
-            /* margin: 0px auto; */
+            height: 500px;
+            margin: 0px auto;
             background-color: red;
         }
 
